deploy/base/registry/statefulset.registry.k8s.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
spec:
  template:
    spec:
      containers:
        - name: registry
          image: registry:2.7.1
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: auth
              mountPath: /auth
            - name: data
              mountPath: /var/lib/registry
      volumes:
        - name: auth
          secret:
            secretName: registry-auth
        - name: data
          hostPath:
            path: /opt/c33/registry
  serviceName: registry
