deploy/base/registry/service.registry.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  ports:
    - port: 80
      targetPort: 5000
